--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,11 @@
-.copy {
-  text-align: center;
+div.card {
+  background-color: #eeeeee;
+  /* height: 300px;
+  width: 300px; */
+  box-shadow: 10px 10px grey;
+  padding: 10px;
+  border-radius: 10px;
+  display: inline-block;
+  margin-right:15px;
+  margin-bottom:20px;
 }
