--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,22 @@ div.card {
   box-shadow: 10px 10px grey;
   padding: 10px;
   border-radius: 10px;
-  display: inline-block;
+  /* display: inline-block; */
   margin-right:15px;
+  margin-bottom:20px;
+}
+
+div.container{
+
+  background: #89cff0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+
+
+img {
   margin-bottom:20px;
 }
